# EMURGO_Hv4

./: AdvTypes-1.hs  AdvTypes-2.hs  Applicatives.hs  BST.hs  Functors-1.hs  Functors-2.hs  ListMonad.hs  Monads-1.hs  Monads-2.hs  Monoids.hs  Reader.hs  State.hs  Transformers-1.hs  Transformers-2.hs  Writer.hs  actions_calculations.js  cabal_walkthrough.md  glossary.md
FizzBuzz/: Fizz.hs  Main.hs  README.md
IO_Guessing/: Main.hs
Misc/: CCVal.hs
Notes/: Currying.txt  chapter_outline.md  functor.md  functor_anim.md  typeclasses.md
Pokemon/: Applicative.hs  Functions.hs  HOF.hs  IO.hs  Misc.hs  PokeData.hs  SimpleFunctions.hs  SimpleTypes.hs  Types.hs
Scripts/: List_Tuple_Function.txt  Values_and_Types.txt  fold.txt
TTT/: Assignment.hs  Functions.md  Solutions.hs
TTT/TicHaskToe/: CHANGELOG.md  TicHaskToe.cabal
TTT/TicHaskToe/assignments/: A1.hs  A2.hs  A3.hs  A4.hs  A5.hs  Main.hs
TTT/TicHaskToe/lessons/L1/: A1-1.md  A1-2.md  SS1.md  _L1-1_.md  _L1-2.md
TTT/TicHaskToe/lessons/L2/: A2-1.md  A2-2.md  SS2.md  _L2-1.md  _L2-2.md
TTT/TicHaskToe/solutions/: A1.hs  A2.hs  A3.hs  A4.hs  A5.hs  Main.hs
