cabal-version:      2.4
name:               TicHaskToe
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ian Burzynski
maintainer:         23251244+iburzynski@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable TicHaskToe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    A1
                    , A2
                    , A3
                    , A4
                    , A5

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , random
    hs-source-dirs:   solutions
    default-language: Haskell2010
